@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="yes"?>
-<addon id="script.module.tulip" name="Tulip Library" version="2.9.3" provider-name="Twilight0">
+<addon id="script.module.tulip" name="Tulip Library" version="2.9.4" provider-name="Twilight0">
     <requires>
         <import addon="xbmc.addon" version="16.1.000"/>
         <import addon="script.module.kodi-six" version="0.0.2"/>
@@ -20,6 +20,7 @@
 - Update user agent strings
 - Tweaks in compat module
 - Fixes in the bookmarking functions
+- Various other compatibility fixes
 
 [B]2.8.X[/B]
 - Replaced xbmc.python import with xbmc.addon for Matrix compatibility
